tests/shadow_delete/shadow_delete.exp
Error ----------------------------------------------------------------------------------------------------- dir/A.js:3:1

Cannot cast `require(...)` to string because number [1] is incompatible with string [2]. [incompatible-type]

   dir/A.js:3:1
   3| require('B') as string;
      ^^^^^^^^^^^^

References:
   dir/node_modules/B.js:3:18
   3| module.exports = 0;
                       ^ [1]
   dir/A.js:3:17
   3| require('B') as string;
                      ^^^^^^ [2]



Found 1 error

Delete dependency that was shadowing another dependency
Expect shadowed dependency, now unshadowed, to trigger error
Error ----------------------------------------------------------------------------------------------------- dir/A.js:3:1

Cannot cast `require(...)` to string because boolean [1] is incompatible with string [2]. [incompatible-type]

   dir/A.js:3:1
   3| require('B') as string;
      ^^^^^^^^^^^^

References:
   node_modules/B.js:3:18
   3| module.exports = false;
                       ^^^^^ [1]
   dir/A.js:3:17
   3| require('B') as string;
                      ^^^^^^ [2]



Found 1 error

Undo delete to resurrect shadowing dependency
Expect shadowing dependency to trigger error
Error ----------------------------------------------------------------------------------------------------- dir/A.js:3:1

Cannot cast `require(...)` to string because number [1] is incompatible with string [2]. [incompatible-type]

   dir/A.js:3:1
   3| require('B') as string;
      ^^^^^^^^^^^^

References:
   dir/node_modules/B.js:3:18
   3| module.exports = 0;
                       ^ [1]
   dir/A.js:3:17
   3| require('B') as string;
                      ^^^^^^ [2]



Found 1 error
